# rsocas

./: .gitignore  000-META-THINKING.md  001-FRAMEWORK-DISSECTION.md  002-INTERFERENCE-PATTERNS.md  003-UNTHINKABLE-DIRECTIONS.md  004-RAW-REASONING-CHAIN.md  005-ARCHITECTURE-SKELETON.md  006-QUESTIONS-THAT-MATTER.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/commands/: dream.md
docs/: ADVANTAGES-AND-SHORTFALLS.md  AGENT-GUIDE.md  ARCHITECTURE.md  USAGE.md
dreams/: 2026-04-28-continual-learning-dream-trace.md
rsocas/adapters/: __init__.py  dspy_leaf_registry.py  gepa_tree_adapter.py  metaharness_bridge.py
rsocas/archive/: __init__.py  distribution_tracker.py  repair_index.py  trace_archive.py
rsocas/breathing/: __init__.py  annealing.py  breathing_crystallizer.py  feedback_anchor.py  interference.py  tempo.py
rsocas/combinators/: __init__.py  crystallizer.py  lambda_rlm_integration.py  penumbra.py  registry.py  versioned.py
rsocas/contracts/: __init__.py  combinators.py  evaluation.py  traces.py
rsocas/development/: __init__.py  orchestrator.py  stages.py
rsocas/evaluation/: __init__.py  benchmark.py  boundary_detection.py  disagreement.py  goodhart_resistant.py  info_theoretic.py
rsocas/observability/: __init__.py  metrics.py  mlflow_logger.py  otel.py  stack.py
rsocas/tests/: test_annealing.py  test_archive.py  test_breathing_crystallizer.py  test_combinators.py  test_disagreement.py  test_dspy_leaf.py  test_e2e_integration.py  test_evaluators.py  test_gepa_adapter.py  test_lambda_rlm_integration.py  test_metaharness_bridge.py  (+8 more)
(+4 files in other folders)
