[project]
name = "rsocas"
version = "0.1.0"
description = "Recursive Self-Optimizing Compound AI System"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
gepa = ["gepa"]
dspy = ["dspy>=2.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["rsocas/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"
